2008-05-12  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-expand-dirs): Stop this function from tossing out
	explicitly specified files.

2008-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el (smerge-apply-resolution-patch): Don't pass nil
	to `insert'.

2008-05-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-annotate-show-diff-revision-at-line): Remove incorrect
	cons.  Use vc-annotate-backend.
	(with-vc-file, edit-vc-file): Remove unused macros.

2008-05-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* mail/smtpmail.el: Add autoload for `auth-source-user-or-password'.
	(smtpmail-try-auth-methods): Use it.

2008-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl.el (cl-set-nthcdr): Make it a defsubst so that
	(setf (nthcdr ..) ..) doesn't require CL at runtime.

2008-05-11  Carsten Dominik  <dominik@science.uva.nl>

	* org/org.el (org-modules): Repair problems with loading org-jsinfo.org.

2008-05-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el (vc-bzr-sha1, vc-bzr-command-discarding-stderr)
	(vc-bzr-revision-completion-table): Use process-file.
	(vc-bzr-working-revision): Pass relative file names.

	* diff-mode.el (diff-hunk-header-re): Refine the regexp.

2008-05-11  Juri Linkov  <juri@jurta.org>

	* wid-edit.el (widget-image-directory): Change default image data
	subdirectory from "custom" to "images/custom".

	* info.el (Info-next-preorder): Let-bind `Info-history' to nil
	before recursive call to `Info-next-preorder' to not add
	intermediate nodes to the history.

	* isearch.el: Put isearch-scroll property on recenter-top-bottom.

	* emulation/cua-base.el: Put isearch-scroll property
	on cua-scroll-up and cua-scroll-down.

2008-05-11  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-hooks.el (vc-recompute-state): Remove (dead code).

2008-05-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dispatcher.el (ewoc): Require.
	(vc-log-edit, vc-buffer-sync): Declare for byte compiler.
